only fixed the background image in main section 1. The Problem is the screen size viewport width was 1920. Now the image is stretched properly. maybe it should be good now.

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,6 +23,7 @@ header ul {
 header nav button {
     background-color: #469165;
     color: white;
+    font-weight: 600;
 
     border: none;
     border-radius: 4px;
@@ -32,15 +33,17 @@ header nav button {
 
 header section {
     background: url("../assets/hero-bg.png");
-    background-repeat: inherit;
-    width: 100%;
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw;
     height: 675px;
-    max-width: unset;
 
     text-align: center;
 }
 
 .header-container {
+    width: 85%;
     padding: 120px 130px;
 }
 
